@@ -1,13 +1,12 @@
 package com.corp.formmate.global.config;
 
 import java.util.Arrays;
-import java.util.List;
 
-import com.corp.formmate.user.handler.OAuth2LoginSuccessHandler;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Lazy;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
@@ -18,12 +17,14 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import com.corp.formmate.jwt.filter.JwtAuthenticationFilter;
+import com.corp.formmate.user.handler.OAuth2LoginSuccessHandler;
 import com.corp.formmate.user.service.CustomUserDetailsService;
 
 @Configuration
@@ -37,9 +38,9 @@ public class SecurityConfig {
 
 	@Autowired
 	public SecurityConfig(
-		@Lazy CustomUserDetailsService customUserDetailsService,
-		@Lazy JwtAuthenticationFilter jwtAuthenticationFilter,
-		@Lazy OAuth2LoginSuccessHandler oAuth2LoginSuccessHandler) {
+			@Lazy CustomUserDetailsService customUserDetailsService,
+			@Lazy JwtAuthenticationFilter jwtAuthenticationFilter,
+			@Lazy OAuth2LoginSuccessHandler oAuth2LoginSuccessHandler) {
 		this.customUserDetailsService = customUserDetailsService;
 		this.jwtAuthenticationFilter = jwtAuthenticationFilter;
 		this.oAuth2LoginSuccessHandler = oAuth2LoginSuccessHandler;
@@ -54,7 +55,7 @@ public class SecurityConfig {
 			.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 			.authorizeHttpRequests(auth -> auth
 					// 모든 API 경로에 접근 허용 (개발 편의를 위해)
-					.requestMatchers("/api/**", "/oauth2/**", "/login/oauth2/code/**").permitAll()
+					.requestMatchers("/api/**", "/oauth2/**", "/login/oauth2/code/**", "/auth/**").permitAll()
 					.anyRequest()
 					.authenticated()
 				//				// 공개 API 경로 설정
@@ -63,16 +64,20 @@ public class SecurityConfig {
 				//				// 나머지 경로는 인증 필요
 				//				.anyRequest()
 				//				.authenticated()
+			)
+			// OAuth2 로그인 설정 추가
+			.oauth2Login(oauth2 -> oauth2
+				// .loginPage("/login") - 커스텀 로그인 페이지가 없으면 주석 처리
+				.redirectionEndpoint(endpoint -> endpoint
+					.baseUri("/api/login/oauth2/code/*") // 중요: 리디렉션 엔드포인트 설정
 				)
-				// OAuth2 로그인 설정 추가
-				.oauth2Login(oauth2 -> oauth2
-						// .loginPage("/login") - 커스텀 로그인 페이지가 없으면 주석 처리
-						.redirectionEndpoint(endpoint -> endpoint
-								.baseUri("/api/login/oauth2/code/*") // 중요: 리디렉션 엔드포인트 설정
-						)
-						.defaultSuccessUrl("/")
-						.successHandler(oAuth2LoginSuccessHandler)
-				);
+				.defaultSuccessUrl("/")
+				.successHandler(oAuth2LoginSuccessHandler)
+			)
+			// 인증 실패 시 401 응답 반환하도록 설정 (리다이렉트 방지)
+			.exceptionHandling(exceptions -> exceptions
+				.authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
+			);
 
 		// Jwt 필터 추가
 		http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
@@ -103,10 +108,18 @@ public class SecurityConfig {
 		CorsConfiguration configuration = new CorsConfiguration();
 
 		// 프로덕션 환경에서는 명시적으로 허용된 도메인만 지정
-		configuration.setAllowedOriginPatterns(List.of("*"));
+//		configuration.setAllowedOriginPatterns(List.of("*"));
+		configuration.setAllowedOriginPatterns(Arrays.asList(
+				"https://j12a205.p.ssafy.io",
+				"http://localhost:5173"
+		));
 
 		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 		configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+
+		// 클라이언트에 노출할 응답 헤더 지정
+		configuration.setExposedHeaders(Arrays.asList("Authorization"));
+
 		configuration.setAllowCredentials(true);
 		// 1시간동안 preflight 결과 캐싱
 		configuration.setMaxAge(3600L);
